# DesktopAssistant

./: .gitignore  .pre-commit-config.yaml  README.md  desktopassistant-0.0.1-py3-none-any.whl  pyproject.toml  requirements.txt  sleepy_claire.py
.github/actions/setup-environment/: action.yaml
.github/workflows/: build-release.yaml  run-tests.yaml
assets/: assets.qrc
misc/: generate_assets.sh  sleepy-claire.service  startup_hide_bat.vbs
src/: assistant.py  main.py  sleep_assistant.py
src/DesktopAssistant/: assets.py  assistant.py
src/DesktopAssistant/assets/: __init__.py
src/DesktopAssistant/cmd/: DesktopAssistant.py  SleepAssistant.py
src/DesktopAssistant/utils/: filetype.py  qt.py
src/utils/: filetype.py
