[tool.poetry]
name = "DesktopAssistant"
version = "0.0.1"
description = "a little friend for your desktop :3"
authors = ["Amelia Sinclaire <asinclaire.HRI@gmail.com>",
           "bumbledbees <sam@bombus.cloud>"]
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/a-sinclaire/DesktopAssistant"
keywords = ["qt", "qt6", "gui", "desktop", "assistant"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Other/Nonlisted Topic"
]
packages = [
    { include = "DesktopAssistant", from = "src" }
]
include = ["assets/*", "misc/*"]

[tool.poetry.dependencies]
python = "^3.9, <3.13"
pyside6 = "~6.7"

[tool.poetry.group.dev.dependencies]
isort = "~5.13"
flake8 = "~7.0"
pylint = "~3.2"

[tool.poetry.scripts]
DesktopAssistant = "DesktopAssistant.cmd.DesktopAssistant:main"
SleepAssistant = "DesktopAssistant.cmd.SleepAssistant:main"

[tool.isort]
force_sort_within_sections = true

[tool.pylint]
argument-naming-style = "camelCase"
attr-naming-style = "camelCase"
function-naming-style = "camelCase"
method-naming-style = "camelCase"
variable-naming-style = "camelCase"
good-names = "DesktopAssistant,SleepAssistant"

disable = """c-extension-no-member,\
             missing-class-docstring,\
             missing-function-docstring,\
             missing-module-docstring,\
             no-name-in-module,\
             too-few-public-methods"""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
